add keywords to package

--- a/package.json
+++ b/package.json
@@ -2,6 +2,12 @@
   "name": "generator-webpack-webapp",
   "version": "0.1.0",
   "description": "Yo generator for web apps build with webpack, web them all!",
+  "keywords": [
+    "yeoman-generator",
+    "generator",
+    "webapp",
+    "webpack"
+  ],
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
