--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "webapp",
     "webpack"
   ],
-  "main": "src/index.js",
+  "main": "app/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
