--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:noxan/generator-webpack-webapp.git"
+  },
   "author": "Richard Stromer <richard@devisio.net>",
   "license": "MIT"
 }
