--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -7,5 +7,8 @@
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {<% if (includeAngular) { %>
+    "angular": "^1.3.16"<% } %>
   }
 }
