--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -1,7 +1,7 @@
 {
   "name": "<%= appname %>",
   "version": "0.0.0",
-  "description": "",
+  "description": "<%= description %>",
   "keywords": [
   ],
   "main": "src/app.js",
