--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -10,5 +10,8 @@
   },
   "dependencies": {<% if (includeAngular) { %>
     "angular": "^1.3.16"<% } %>
+  },
+  "devDependencies": {
+    "webpack": "^1.9.10"
   }
 }
