--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -6,7 +6,8 @@
   ],
   "main": "src/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "./node_modules/webpack/bin/webpack.js"
   },
   "dependencies": {<% if (includeAngular) { %>
     "angular": "^1.3.16"<% } %>
