--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -13,6 +13,13 @@
     "angular": "^1.3.16"<% } %>
   },
   "devDependencies": {
-    "webpack": "^1.9.10"
+    "css-loader": "^0.14.5",
+    "file-loader": "^0.8.4",
+    "jade": "^1.11.0",
+    "jade-html-loader": "0.0.2",
+    "jade-loader": "^0.7.1",
+    "style-loader": "^0.12.3",
+    "stylus-loader": "^1.2.0",
+    "webpack": "^1.9.11"
   }
 }
