--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -20,6 +20,7 @@
     "jade-loader": "^0.7.1",
     "style-loader": "^0.12.3",
     "stylus-loader": "^1.2.0",
-    "webpack": "^1.9.11"
+    "webpack": "^1.9.11",
+    "webpack-dev-server": "^1.9.0"
   }
 }
