--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -18,6 +18,10 @@
     "jade": "^1.11.0",
     "jade-html-loader": "0.0.2",
     "jade-loader": "^0.7.1",
+    "jscs": "^1.13.1",
+    "jscs-loader": "^0.1.0",
+    "jshint": "^2.8.0",
+    "jshint-loader": "^0.8.3",
     "style-loader": "^0.12.3",
     "stylus-loader": "^1.2.0",
     "webpack": "^1.9.11",
