--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -2,14 +2,18 @@
   "name": "<%= appname %>",
   "version": "0.0.0",
   "description": "<%= description %>",
-  "keywords": [
-  ],
   "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/webpack/bin/webpack.js",
     "dev": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js --progress --colors"
   },
+  "repository": {
+    "type": "",
+    "url": ""
+  },
+  "keywords": [
+  ],
   "dependencies": {<% if (includeAngular) { %>
     "angular": "^1.3.16"<% } %>
   },
