--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -14,6 +14,8 @@
   },
   "keywords": [
   ],
+  "author": "",
+  "license": "",
   "dependencies": {<% if (includeAngular) { %>
     "angular": "^1.3.16"<% } %>
   },
